# Quizz

./: .gitignore  CMakeLists.txt  README.md
docs/: Estructura.txt
engine/core/: EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  Window.cpp  Window.hpp
engine/graphics/: TextRenderer.cpp  TextRenderer.hpp
engine/graphics/shapes/: BotonRectangular.cpp  BotonRectangular.hpp  BotonRespuesta.cpp  BotonRespuesta.hpp  Rectangle.cpp  Rectangle.hpp
game/: MainGame.cpp  MainGame.hpp
game/Database/: ExtraerDB.cpp  ExtraerDB.hpp  QuestionBank.cpp  QuestionBank.hpp
game/States/: GameState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp  ResultState.cpp  ResultState.hpp  SelectQState.cpp  SelectQState.hpp  StateManager.cpp  StateManager.hpp  StateRequest.cpp  StateRequest.hpp
src/: main.cpp
